@@ -217,6 +217,7 @@ export(visualizeParetoOptimalFront)
 import(BBmisc)
 import(ParamHelpers)
 import(RColorBrewer)
+import(RJSONIO)
 import(checkmate)
 import(ggplot2)
 import(plot3D)
