@@ -4,6 +4,7 @@
 #' @import ggplot2
 #' @import RColorBrewer
 #' @import plot3D
+#' @import RJSONIO
 #' @useDynLib smoof
 #' @importFrom mco nsga2
 #' @importFrom Rcpp sourceCpp
