@@ -5,6 +5,8 @@ smoof v1.5 (Release data: xxxx-xx-xx)
 * Improved docs slighly
 * Added shortcuts {s,m}nof for generating single-/multi-objective objective functions
   with numeric parameters only
+* Fixed: precision issue caused by rPython respectively RJSONIO::toJSON, which by
+  default strips numeric values to only 4 digits.
 
 smoof v1.4 (Release data: 2016-08-03)
 ============
